--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,19 @@
     grid-gap: 1rem;
 }
 
+@media screen and (max-width: 1280px) {
+    #quotes {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #quotes {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+
 #quotes article {
     aspect-ratio: 4/3;
     padding: 1rem;
