--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+body {
+    padding: 1rem;
+}
+
 #quotes {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -22,4 +26,3 @@
     padding: 1rem;
     border-radius: 2rem;
 }
-
